[package]
name = "apecoin"
version = "1.0.0"
description = "Apecoin Substreams"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "18.0.0"
hex-literal = "0.4.1"
bigdecimal = "0.3.0"
prost = "0.11"
substreams-entity-change = "1.2.2"

hex = "0.4.3"
num-bigint = "0.4"
pad = "0.1"
thiserror = "1.0.37"
prost-types = "0.11.8"


# Use latest from https://crates.io/crates/substreams
substreams = "0.5.6"
# Use latest from https://crates.io/crates/substreams-ethereum
substreams-ethereum = "0.9.1"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9.1"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"